syntax = "proto3";

package gen;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Salam4nder/user/internal/proto/gen";

message UserResponse {
    string id = 1;
    string full_name = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 5;
}

message CreateUserRequest {
    string full_name = 1;
    string email = 2;
    string password = 3;
}

message UserID {
    string id = 1;
}

message ReadByEmailRequest {
    string email = 1;
}

message UpdateUserRequest {
    string id = 1;
    string full_name = 2;
    string email = 3;
}
